class UserEntity{
  final String id;
  final String name;
  final String email;
  final String phone;
  final String profileImage;
  final String token;

  UserEntity({
    required this.id,
    required this.name,
    required this.email,
    required this.phone,
    required this.profileImage,
    required this.token,
  }); 
}